removed default styles

--- a/my-color-game/src/styles/Game.css
+++ b/my-color-game/src/styles/Game.css
@@ -33,7 +33,7 @@
 
 /* Game Instructions */
 .game-instructions {
-  color: #00d2ff; /* Neon Yellow */
+  color: #4dc1db; /* Neon Yellow */
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 1px;
