--- a/my-color-game/src/styles/Game.css
+++ b/my-color-game/src/styles/Game.css
@@ -3,9 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   min-height: 100vh;
-  padding: 2rem;
+  width: 100vw;
+  padding-left: 12rem;
+  padding-right: 12rem;
 }
 
 /* New Game Button */
@@ -37,9 +39,10 @@
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 1px;
-  border-bottom: 2px solid #00d2ff;
   padding-bottom: 5px;
+  margin-bottom: 1rem;
   padding-top: 1rem;
+  text-align: center;
 }
 
 .game-instructions h2 {
@@ -91,4 +94,20 @@
   0% { opacity: 1; }
   50% { opacity: 0.5; }
   100% { opacity: 1; }
+}
+
+/* Small screens (mobile) */
+@media (max-width: 640px) {
+  .game-container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+/* Medium screens (tablets) */
+@media (min-width: 641px) and (max-width: 1024px) {
+  .game-container {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
 }
